--- a/src/res/css/app-default.scss
+++ b/src/res/css/app-default.scss
@@ -170,28 +170,58 @@
 }
 
 .spotdetail-status {
-	position: relative;
-	margin: 5px;	
-	top: 10px;	
-	/*float: left;*/
+
+	margin: 5px;
+
+	div {
+		padding: 3px;
+	}
+
+	div.key {
+		width: 120px;
+		float: left;
+	}
+
+	div.value {
+		text-align: right;
+		display: inline-block;
+		/*padding: 3px;*/
+	}
+
+	div.order_placed{
+		border: 1px solid black;	
+		background-color: red;
+		/*padding: 3px;*/
+	}
+	div.payment_request{
+		border: 1px solid black;	
+		background-color: red;
+		/*padding: 3px;*/
+	}
+	div.checkedin{
+		border: 1px solid black;	
+		background-color: green;
+		/*padding: 3px;*/
+	}
+
 }
 
 .spotdetail-status .order_placed{
 	border: 1px solid black;	
 	background-color: red;
-	padding: 3px;
+	/*padding: 3px;*/
 }
 
 .spotdetail-status .payment_request{
 	border: 1px solid black;	
 	background-color: red;
-	padding: 3px;
+	/*padding: 3px;*/
 }
 
 .spotdetail-status .checkedin{
 	border: 1px solid black;	
 	background-color: green;
-	padding: 3px;
+	/*padding: 3px;*/
 }
 
 .spotdetail-statistics {
