--- a/src/res/css/app-default.scss
+++ b/src/res/css/app-default.scss
@@ -169,6 +169,13 @@
 	margin-left: 5px;
 }
 
+.spotdetail-status-panel {
+	background-color: #C3C3C3;
+	margin-bottom: 1em;
+	border-bottom-right-radius: 0.2em;
+	border-bottom-left-radius: 0.2em;
+}
+
 .spotdetail-status {
 
 	margin: 5px;
@@ -180,6 +187,7 @@
 	div.key {
 		width: 120px;
 		float: left;
+		font-weight: bold;
 	}
 
 	div.value {
@@ -251,7 +259,7 @@
 }
 
 .spotdetailitem-customer-label {
-	background-color: white;
+	background-color: #EEEEEE;
 	text-align: center;
 	font-weight: bold;
 }
