--- a/src/res/css/app-default.scss
+++ b/src/res/css/app-default.scss
@@ -32,6 +32,15 @@
 	font-weight: bold;
 }
 
+/* Class for dialogs like spot selection or complete checkin */
+.general-dialog {
+
+	.description {
+		background-color: #EEEEEE;	
+	}
+
+}
+
 /* spot view */
 
 .spot {
