--- a/src/res/css/app-default.css
+++ b/src/res/css/app-default.css
@@ -9796,17 +9796,18 @@ input[type="search"]::-webkit-search-cancel-button {
 /* line 38, app-default.scss */
 .general-dialog .description {
   background-color: #EEEEEE;
+  font-size: 0.8em;
 }
 
 /* spot view */
-/* line 46, app-default.scss */
+/* line 47, app-default.scss */
 .spot {
   float: left;
   width: 150px;
   margin: 10px;
 }
 
-/* line 52, app-default.scss */
+/* line 53, app-default.scss */
 .spotitem {
   height: 130px;
   border: solid 1px;
@@ -9820,46 +9821,46 @@ input[type="search"]::-webkit-search-cancel-button {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(3%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0.5)));
 }
 
-/* line 65, app-default.scss */
+/* line 66, app-default.scss */
 .spot div {
   width: 100%;
 }
 
-/* line 70, app-default.scss */
+/* line 71, app-default.scss */
 .spot h2 {
   text-align: center;
   font-size: 1.5em;
 }
 
-/* line 75, app-default.scss */
+/* line 76, app-default.scss */
 .spot p {
   text-align: center;
 }
 
-/* line 80, app-default.scss */
+/* line 81, app-default.scss */
 .spot-filter-panel {
   /*	-webkit-box-shadow: 0em 0em 0em 0.3 #888;
   	box-shadow: 0em 0em 0em 0.3 #888;*/
 }
 
-/* line 85, app-default.scss */
+/* line 86, app-default.scss */
 .spot-filter-label {
   text-align: center;
   font-size: 1.5em;
 }
 
-/* line 90, app-default.scss */
+/* line 91, app-default.scss */
 .spotitem-pressed {
   /*background-color: rgb(100,100,100) !important;*/
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0.5)), color-stop(97%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0)));
 }
 
-/* line 95, app-default.scss */
+/* line 96, app-default.scss */
 .spotSelected {
   background-color: #6464c8;
 }
 
-/* line 101, app-default.scss */
+/* line 102, app-default.scss */
 .spotitem-checkedin {
   background-color: #64ff64;
   /*	background-color: #c9de96; // Old browsers
@@ -9867,24 +9868,24 @@ input[type="search"]::-webkit-search-cancel-button {
   	@include background-image(linear-gradient(top,  #c9de96 0%,#8ab66b 44%,#398235 100%));*/
 }
 
-/* line 111, app-default.scss */
+/* line 112, app-default.scss */
 .spotitem-placed {
   background-color: #c86464;
 }
 
 @-webkit-keyframes blinker {
-  /* line 116, app-default.scss */
+  /* line 117, app-default.scss */
   from {
     opacity: 1.0;
   }
 
-  /* line 117, app-default.scss */
+  /* line 118, app-default.scss */
   to {
     opacity: 0.0;
   }
 }
 
-/* line 120, app-default.scss */
+/* line 121, app-default.scss */
 .spotitem-request {
   background-color: #c86464;
   -webkit-animation-name: blinker;
@@ -9893,17 +9894,17 @@ input[type="search"]::-webkit-search-cancel-button {
   -webkit-animation-duration: 1s;
 }
 
-/* line 132, app-default.scss */
+/* line 133, app-default.scss */
 .loginbox {
   background-color: #6464c8;
 }
 
-/* line 136, app-default.scss */
+/* line 137, app-default.scss */
 .loginbox-field {
   margin-bottom: 0.5em;
 }
 
-/* line 140, app-default.scss */
+/* line 141, app-default.scss */
 .spotdetail {
   background-color: white;
   border: 2px solid grey;
@@ -9911,25 +9912,25 @@ input[type="search"]::-webkit-search-cancel-button {
   /*padding: 8px;*/
 }
 
-/* line 147, app-default.scss */
+/* line 148, app-default.scss */
 .spotdetail-titlebar {
   border-top-left-radius: 0.3em;
   border-top-right-radius: 0.3em;
 }
 
-/* line 152, app-default.scss */
+/* line 153, app-default.scss */
 .spotdetail-toolbar {
   background-color: white;
   border-top: 2px solid black;
   padding-top: 3px;
 }
 
-/* line 158, app-default.scss */
+/* line 159, app-default.scss */
 .spotdetail-customer-name {
   word-break: break-word;
 }
 
-/* line 166, app-default.scss */
+/* line 167, app-default.scss */
 .spotdetail-customer-flag {
   background-color: red;
   float: left;
@@ -9940,13 +9941,13 @@ input[type="search"]::-webkit-search-cancel-button {
   -webkit-mask-image: url("../images/request.png");
 }
 
-/* line 176, app-default.scss */
+/* line 177, app-default.scss */
 .spotdetail-toolbar-button {
   margin-right: 5px;
   margin-left: 5px;
 }
 
-/* line 181, app-default.scss */
+/* line 182, app-default.scss */
 .spotdetail-status-panel {
   background-color: #C3C3C3;
   margin-bottom: 1em;
@@ -9954,67 +9955,67 @@ input[type="search"]::-webkit-search-cancel-button {
   border-bottom-left-radius: 0.2em;
 }
 
-/* line 188, app-default.scss */
+/* line 189, app-default.scss */
 .spotdetail-status {
   margin: 5px;
 }
-/* line 192, app-default.scss */
+/* line 193, app-default.scss */
 .spotdetail-status div {
   padding: 3px;
 }
-/* line 196, app-default.scss */
+/* line 197, app-default.scss */
 .spotdetail-status div.key {
   width: 120px;
   float: left;
   font-weight: bold;
 }
-/* line 202, app-default.scss */
+/* line 203, app-default.scss */
 .spotdetail-status div.value {
   text-align: right;
   display: inline-block;
   /*padding: 3px;*/
 }
-/* line 208, app-default.scss */
+/* line 209, app-default.scss */
 .spotdetail-status div.order_placed {
   border: 1px solid black;
   background-color: red;
   /*padding: 3px;*/
 }
-/* line 213, app-default.scss */
+/* line 214, app-default.scss */
 .spotdetail-status div.payment_request {
   border: 1px solid black;
   background-color: red;
   /*padding: 3px;*/
 }
-/* line 218, app-default.scss */
+/* line 219, app-default.scss */
 .spotdetail-status div.checkedin {
   border: 1px solid black;
   background-color: green;
   /*padding: 3px;*/
 }
 
-/* line 226, app-default.scss */
+/* line 227, app-default.scss */
 .spotdetail-status .order_placed {
   border: 1px solid black;
   background-color: red;
   /*padding: 3px;*/
 }
 
-/* line 232, app-default.scss */
+/* line 233, app-default.scss */
 .spotdetail-status .payment_request {
   border: 1px solid black;
   background-color: red;
   /*padding: 3px;*/
 }
 
-/* line 238, app-default.scss */
+/* line 239, app-default.scss */
 .spotdetail-status .checkedin {
   border: 1px solid black;
   background-color: green;
   /*padding: 3px;*/
 }
 
-/* line 244, app-default.scss */
+/* line 245, app-default.scss */
 .spotdetail-statistics {
   position: relative;
   top: 10px;
@@ -10028,7 +10029,7 @@ input[type="search"]::-webkit-search-cancel-button {
   min-width: 40px;
 }
 
-/* line 257, app-default.scss */
+/* line 258, app-default.scss */
 .spotdetail-close {
   background-color: black;
   border-radius: 1em;
@@ -10042,14 +10043,14 @@ input[type="search"]::-webkit-search-cancel-button {
   top: 3px;
 }
 
-/* line 270, app-default.scss */
+/* line 271, app-default.scss */
 .spotdetailitem-customer-label {
   background-color: #EEEEEE;
   text-align: center;
   font-weight: bold;
 }
 
-/* line 276, app-default.scss */
+/* line 277, app-default.scss */
 .spotdetailitem-flag {
   width: 10%;
   top: 0;
@@ -10060,14 +10061,14 @@ input[type="search"]::-webkit-search-cancel-button {
   margin-left: 5px;
 }
 
-/* line 287, app-default.scss */
+/* line 288, app-default.scss */
 .spotdetailitem-order {
   /*width: 70%;*/
   margin-bottom: 20px;
   font-size: 0.8em;
 }
 
-/* line 293, app-default.scss */
+/* line 294, app-default.scss */
 .spotdetailitem-order h2 {
   font-weight: bold;
   /*float: left;*/
@@ -10075,34 +10076,34 @@ input[type="search"]::-webkit-search-cancel-button {
   margin-right: 10px;
 }
 
-/* line 300, app-default.scss */
+/* line 301, app-default.scss */
 .spotdetailitem-order h4 {
   font-size: 1em;
 }
 
-/* line 304, app-default.scss */
+/* line 305, app-default.scss */
 .spotdetailitem-order h3 {
   font-size: 1em;
   font-weight: bold;
 }
 
-/* line 309, app-default.scss */
+/* line 310, app-default.scss */
 .spotdetailitem-order-cancel {
   text-decoration: line-through;
 }
 
-/* line 313, app-default.scss */
+/* line 314, app-default.scss */
 .spotdetailitem-order-cancel h2 {
   text-decoration: line-through;
 }
 
-/* line 317, app-default.scss */
+/* line 318, app-default.scss */
 .x-button-icon.spotdetailitem-confirm, .x-button .x-button-icon.x-icon-mask.spotdetailitem-confirm {
   -webkit-mask-image: url("../images/check_icon.png");
   /*background-image: url('../images/check_icon.png');*/
 }
 
-/* line 322, app-default.scss */
+/* line 323, app-default.scss */
 .spotdetailitem-order div:nth-of-type(1) {
   /*position: absolute; 
   right: 0; 
@@ -10111,13 +10112,13 @@ input[type="search"]::-webkit-search-cancel-button {
   	padding-right: 5px;*/
 }
 
-/* line 330, app-default.scss */
+/* line 331, app-default.scss */
 .spotdetailitem-order .choices {
   clear: both;
   text-align: left;
 }
 
-/* line 335, app-default.scss */
+/* line 336, app-default.scss */
 .spotdetailitem-confirm {
   top: 0;
   /*position: absolute;*/
@@ -10125,7 +10126,7 @@ input[type="search"]::-webkit-search-cancel-button {
   /*width: 10%;*/
 }
 
-/* line 342, app-default.scss */
+/* line 343, app-default.scss */
 .spotdetailitem-cancel {
   /*width: 10%;*/
   top: 0;
@@ -10134,18 +10135,18 @@ input[type="search"]::-webkit-search-cancel-button {
   /*float: left;*/
 }
 
-/* line 349, app-default.scss */
+/* line 350, app-default.scss */
 .cancel-all {
   -webkit-mask-image: url("res/images/forbidden.png");
 }
 
 /* request view */
-/* line 355, app-default.scss */
+/* line 356, app-default.scss */
 .requestitem-container {
   margin: 0.3em;
 }
 
-/* line 359, app-default.scss */
+/* line 360, app-default.scss */
 .requestitem-wrapper {
   /*border: 1px solid #C3C3C3;*/
   /*background-color: #c3c3c3;*/
@@ -10154,7 +10155,7 @@ input[type="search"]::-webkit-search-cancel-button {
   color: black;
 }
 
-/* line 367, app-default.scss */
+/* line 368, app-default.scss */
 .requestitem-spot {
   border: 1px solid #000;
   background-color: #4975A2;
@@ -10165,7 +10166,7 @@ input[type="search"]::-webkit-search-cancel-button {
   word-break: break-word;
 }
 
-/* line 377, app-default.scss */
+/* line 378, app-default.scss */
 .requestitem-customer {
   border: 1px solid #000;
   background-color: #C6D7E9;
@@ -10180,7 +10181,7 @@ input[type="search"]::-webkit-search-cancel-button {
   /*width: 65%;*/
 }
 
-/* line 391, app-default.scss */
+/* line 392, app-default.scss */
 .requestitem-time {
   border: 1px solid #000;
   background-color: #DFE8CB;
@@ -10194,13 +10195,13 @@ input[type="search"]::-webkit-search-cancel-button {
   /*width: 25%;*/
 }
 
-/* line 404, app-default.scss */
+/* line 405, app-default.scss */
 .requestitem-wrapper-pressed {
   /*background-color: #F5B800;*/
   color: white;
 }
 
-/* line 409, app-default.scss */
+/* line 410, app-default.scss */
 .requestitem-alert {
   -webkit-animation-name: blinker;
   -webkit-animation-iteration-count: infinite;
@@ -10209,12 +10210,12 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 /* history view */
-/* line 417, app-default.scss */
+/* line 418, app-default.scss */
 .historyitem-container {
   margin: 0.3em;
 }
 
-/* line 421, app-default.scss */
+/* line 422, app-default.scss */
 .historyitem-wrapper {
   /*border: 1px solid #C3C3C3;*/
   /*background-color: #c3c3c3;*/
@@ -10223,7 +10224,7 @@ input[type="search"]::-webkit-search-cancel-button {
   color: black;
 }
 
-/* line 429, app-default.scss */
+/* line 430, app-default.scss */
 .historyitem-spot {
   border: 1px solid #000;
   background-color: #4975A2;
@@ -10234,7 +10235,7 @@ input[type="search"]::-webkit-search-cancel-button {
   word-break: break-word;
 }
 
-/* line 439, app-default.scss */
+/* line 440, app-default.scss */
 .historyitem-customer {
   border: 1px solid #000;
   background-color: #C6D7E9;
@@ -10249,7 +10250,7 @@ input[type="search"]::-webkit-search-cancel-button {
   /*width: 20%;*/
 }
 
-/* line 453, app-default.scss */
+/* line 454, app-default.scss */
 .historyitem-time {
   border: 1px solid #000;
   background-color: #DFE8CB;
@@ -10264,7 +10265,7 @@ input[type="search"]::-webkit-search-cancel-button {
   /*width: 15%;*/
 }
 
-/* line 467, app-default.scss */
+/* line 468, app-default.scss */
 .historyitem-total {
   border: 1px solid #000;
   background-color: #D0F5A9;
@@ -10277,12 +10278,12 @@ input[type="search"]::-webkit-search-cancel-button {
   /*width: 10%;*/
 }
 
-/* line 479, app-default.scss */
+/* line 480, app-default.scss */
 .historyitem-wrapper-pressed {
   color: white;
 }
 
-/* line 483, app-default.scss */
+/* line 484, app-default.scss */
 .history-info-panel {
   display: -webkit-box;
   -webkit-box-orient: vertical;
@@ -10291,7 +10292,7 @@ input[type="search"]::-webkit-search-cancel-button {
   background-color: #C3C3C3;
 }
 
-/* line 491, app-default.scss */
+/* line 492, app-default.scss */
 .history-info-panel .row {
   display: -webkit-box;
   -webkit-box-orient: horizontal;
@@ -10299,13 +10300,13 @@ input[type="search"]::-webkit-search-cancel-button {
   /*	-webkit-box-pack: end;*/
 }
 
-/* line 498, app-default.scss */
+/* line 499, app-default.scss */
 .history-info-panel .row > div {
   /*-webkit-box-flex: 1;*/
   width: 50%;
 }
 
-/* line 503, app-default.scss */
+/* line 504, app-default.scss */
 .history-detail-list-title {
   font-size: 1.2em;
   font-weight: bold;
@@ -10314,7 +10315,7 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 /* connections status indicator in bottom toolbar */
-/* line 515, app-default.scss */
+/* line 516, app-default.scss */
 .status-indicator-ONLINE .status {
   width: 1.2em;
   height: 1.2em;
@@ -10325,7 +10326,7 @@ input[type="search"]::-webkit-search-cancel-button {
   border: 1px solid black;
 }
 
-/* line 529, app-default.scss */
+/* line 530, app-default.scss */
 .status-indicator-TIMEOUT .status {
   width: 1.2em;
   height: 1.2em;
@@ -10336,7 +10337,7 @@ input[type="search"]::-webkit-search-cancel-button {
   border: 1px solid black;
 }
 
-/* line 541, app-default.scss */
+/* line 542, app-default.scss */
 .status-indicator-RECONNECT .status {
   width: 1.2em;
   height: 1.2em;
@@ -10347,7 +10348,7 @@ input[type="search"]::-webkit-search-cancel-button {
   border: 1px solid black;
 }
 
-/* line 553, app-default.scss */
+/* line 554, app-default.scss */
 .status-indicator-INITIALIZING .status {
   width: 1.2em;
   height: 1.2em;
@@ -10358,7 +10359,7 @@ input[type="search"]::-webkit-search-cancel-button {
   border: 1px solid black;
 }
 
-/* line 565, app-default.scss */
+/* line 566, app-default.scss */
 .status-indicator-CONNECTION_LOST .status {
   width: 1.2em;
   height: 1.2em;
@@ -10369,7 +10370,7 @@ input[type="search"]::-webkit-search-cancel-button {
   border: 1px solid black;
 }
 
-/* line 577, app-default.scss */
+/* line 578, app-default.scss */
 .status-indicator-DISCONNECTED .status {
   width: 1.2em;
   height: 1.2em;
@@ -10381,20 +10382,20 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 /* Volume Button */
-/* line 590, app-default.scss */
+/* line 591, app-default.scss */
 .volume_mute {
   background-image: none !important;
   background-color: #FA5858 !important;
 }
 
-/* line 595, app-default.scss */
+/* line 596, app-default.scss */
 .volume {
   background-image: none !important;
   background-color: #64FF64 !important;
 }
 
 /* Lock button */
-/* line 602, app-default.scss */
+/* line 603, app-default.scss */
 .locked-button .x-button-icon {
   -webkit-mask-image: url("/cockpit/res/images/lock_closed.png");
   background-color: black;
