design improvements, bug fixes

--- a/src/res/css/app-default.scss
+++ b/src/res/css/app-default.scss
@@ -151,9 +151,9 @@
 }
 
 .spotdetail-toolbar {
-	background-color: white;
+	background-color: #EEE;
 	/*border-top: 2px solid black;*/
-	padding-top: 3px;
+	/*padding-top: 3px;*/
 }
 
 .spotdetail-customer-name {
