--- a/src/res/css/app-default.css
+++ b/src/res/css/app-default.css
@@ -9920,9 +9920,9 @@ input[type="search"]::-webkit-search-cancel-button {
 
 /* line 153, app-default.scss */
 .spotdetail-toolbar {
-  background-color: white;
+  background-color: #EEE;
   /*border-top: 2px solid black;*/
-  padding-top: 3px;
+  /*padding-top: 3px;*/
 }
 
 /* line 159, app-default.scss */
